// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListsContainer does not render pending lists when they do not exist 1`] = `
<div>
  <h1>
    Lists
  </h1>
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add List
  </button>
  <form
    autocomplete="off"
    class="collapse"
    id="form-collapse"
    style="padding: 6px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="name"
      >
        Name
      </label>
      <input
        class="form-control"
        id="name"
        name="name"
        placeholder="My super cool list"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="type"
      >
        Type
      </label>
      <select
        class="form-control"
        id="type"
        name="type"
      >
        <option
          value="BookList"
        >
          books
        </option>
        <option
          value="GroceryList"
        >
          groceries
        </option>
        <option
          value="MusicList"
        >
          music
        </option>
        <option
          value="SimpleList"
        >
          simple
        </option>
        <option
          value="ToDoList"
        >
          to-do
        </option>
      </select>
      
    </div>
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Create List
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr
    class="mb-4"
  />
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-left"
      >
        <div
          class="row"
          style="margin: 0px;"
        >
          <h2
            class="text-capitalize"
          >
            Incomplete
          </h2>
          <i
            class="far fa-question-circle float-right text-secondary"
            data-test-id="Incomplete-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-right btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id3"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <a
                  class="router-link"
                  href="/lists/id3"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-music text-info mr-3"
                    />
                    baz
                  </h5>
                </a>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="incomplete-list-complete"
                    style="pointer-events: auto; opacity: 1;"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <a
                    class="p-0 mr-3"
                    data-test-id="incomplete-list-share"
                    href="/lists/id3/users_lists"
                    style="pointer-events: auto; opacity: 1;"
                  >
                    <i
                      class="fa fa-users fa-2x text-primary"
                    />
                  </a>
                  <a
                    class="p-0 mr-3"
                    data-test-id="incomplete-list-edit"
                    href="/lists/id3/edit"
                    style="pointer-events: auto; opacity: 1;"
                  >
                    <i
                      class="fa fa-edit fa-2x text-warning"
                    />
                  </a>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id5"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <a
                  class="router-link"
                  href="/lists/id5"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-list text-info mr-3"
                    />
                    foobar
                  </h5>
                </a>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="incomplete-list-complete"
                    style="pointer-events: auto; opacity: 1;"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <a
                    class="p-0 mr-3"
                    data-test-id="incomplete-list-share"
                    disabled=""
                    href="/lists/id5/users_lists"
                    style="pointer-events: none; opacity: 0.3;"
                  >
                    <i
                      class="fa fa-users fa-2x text-primary"
                    />
                  </a>
                  <a
                    class="p-0 mr-3"
                    data-test-id="incomplete-list-edit"
                    href="/lists/id5/edit"
                    style="pointer-events: auto; opacity: 1;"
                  >
                    <i
                      class="fa fa-edit fa-2x text-warning"
                    />
                  </a>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-left"
      >
        <div
          class="row"
          style="margin: 0px;"
        >
          <h2
            class="text-capitalize"
          >
            Completed
          </h2>
          <i
            class="far fa-question-circle float-right text-secondary"
            data-test-id="Completed-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-right btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-group-item"
        data-test-class="completed-list"
        data-test-id="list-id2"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <a
                  class="router-link"
                  href="/lists/id2"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-book text-info mr-3"
                    />
                    bar
                  </h5>
                </a>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="complete-list-refresh"
                    style="pointer-events: auto; opacity: 1;"
                    type="button"
                  >
                    <i
                      class="fa fa-redo fa-2x text-primary"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="complete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-group-item"
        data-test-class="completed-list"
        data-test-id="list-id4"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <a
                  class="router-link"
                  href="/lists/id4"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-book text-info mr-3"
                    />
                    bar
                  </h5>
                </a>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="complete-list-refresh"
                    disabled=""
                    style="pointer-events: none; opacity: 0.3;"
                    type="button"
                  >
                    <i
                      class="fa fa-redo fa-2x text-primary"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="complete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListsContainer renders 1`] = `
<div>
  <h1>
    Lists
  </h1>
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add List
  </button>
  <form
    autocomplete="off"
    class="collapse"
    id="form-collapse"
    style="padding: 6px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="name"
      >
        Name
      </label>
      <input
        class="form-control"
        id="name"
        name="name"
        placeholder="My super cool list"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="type"
      >
        Type
      </label>
      <select
        class="form-control"
        id="type"
        name="type"
      >
        <option
          value="BookList"
        >
          books
        </option>
        <option
          value="GroceryList"
        >
          groceries
        </option>
        <option
          value="MusicList"
        >
          music
        </option>
        <option
          value="SimpleList"
        >
          simple
        </option>
        <option
          value="ToDoList"
        >
          to-do
        </option>
      </select>
      
    </div>
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Create List
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr
    class="mb-4"
  />
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-left"
      >
        <div
          class="row"
          style="margin: 0px;"
        >
          <h2
            class="text-capitalize"
          >
            Pending
          </h2>
          <i
            class="far fa-question-circle float-right text-secondary"
            data-test-id="Pending-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-right btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="pending-list list-group-item"
        data-test-class="pending-list"
        data-test-id="list-id1"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-shopping-bag text-info mr-3"
                  />
                  foo
                </h5>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="pending-list-accept"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="pending-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-left"
      >
        <div
          class="row"
          style="margin: 0px;"
        >
          <h2
            class="text-capitalize"
          >
            Incomplete
          </h2>
          <i
            class="far fa-question-circle float-right text-secondary"
            data-test-id="Incomplete-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-right btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id3"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <a
                  class="router-link"
                  href="/lists/id3"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-music text-info mr-3"
                    />
                    baz
                  </h5>
                </a>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="incomplete-list-complete"
                    style="pointer-events: auto; opacity: 1;"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <a
                    class="p-0 mr-3"
                    data-test-id="incomplete-list-share"
                    href="/lists/id3/users_lists"
                    style="pointer-events: auto; opacity: 1;"
                  >
                    <i
                      class="fa fa-users fa-2x text-primary"
                    />
                  </a>
                  <a
                    class="p-0 mr-3"
                    data-test-id="incomplete-list-edit"
                    href="/lists/id3/edit"
                    style="pointer-events: auto; opacity: 1;"
                  >
                    <i
                      class="fa fa-edit fa-2x text-warning"
                    />
                  </a>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id5"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <a
                  class="router-link"
                  href="/lists/id5"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-list text-info mr-3"
                    />
                    foobar
                  </h5>
                </a>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="incomplete-list-complete"
                    style="pointer-events: auto; opacity: 1;"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <a
                    class="p-0 mr-3"
                    data-test-id="incomplete-list-share"
                    disabled=""
                    href="/lists/id5/users_lists"
                    style="pointer-events: none; opacity: 0.3;"
                  >
                    <i
                      class="fa fa-users fa-2x text-primary"
                    />
                  </a>
                  <a
                    class="p-0 mr-3"
                    data-test-id="incomplete-list-edit"
                    href="/lists/id5/edit"
                    style="pointer-events: auto; opacity: 1;"
                  >
                    <i
                      class="fa fa-edit fa-2x text-warning"
                    />
                  </a>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-left"
      >
        <div
          class="row"
          style="margin: 0px;"
        >
          <h2
            class="text-capitalize"
          >
            Completed
          </h2>
          <i
            class="far fa-question-circle float-right text-secondary"
            data-test-id="Completed-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-right btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-group-item"
        data-test-class="completed-list"
        data-test-id="list-id2"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <a
                  class="router-link"
                  href="/lists/id2"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-book text-info mr-3"
                    />
                    bar
                  </h5>
                </a>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="complete-list-refresh"
                    style="pointer-events: auto; opacity: 1;"
                    type="button"
                  >
                    <i
                      class="fa fa-redo fa-2x text-primary"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="complete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-group-item"
        data-test-class="completed-list"
        data-test-id="list-id4"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="row"
            >
              <div
                class="pt-1 col-md-6"
              >
                <a
                  class="router-link"
                  href="/lists/id4"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-book text-info mr-3"
                    />
                    bar
                  </h5>
                </a>
              </div>
              <div
                class="pt-1 col-md-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="col-md-2"
              >
                <div
                  class="float-right btn-group"
                  role="group"
                >
                  <button
                    class="p-0 mr-3 btn btn-link"
                    data-test-id="complete-list-refresh"
                    disabled=""
                    style="pointer-events: none; opacity: 0.3;"
                    type="button"
                  >
                    <i
                      class="fa fa-redo fa-2x text-primary"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="complete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
